// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usePrim styles dark mode x sizeClass 1`] = `
Object {
  "absolute": Registered { "position": "absolute" },
  "bg": Object {
    "base": Registered { "backgroundColor": "#000" },
    "fg": Registered { "backgroundColor": "#fff" },
    "trim": Registered { "backgroundColor": "#333" },
  },
  "border": Object {
    "color": Object {
      "base": Registered { "borderColor": "#000" },
      "fg": Registered { "borderColor": "#fff" },
      "trim": Registered { "borderColor": "#333" },
    },
    "width": Object {
      "lg": Registered { "borderWidth": 64 },
      "px": Registered { "borderWidth": 0.5 },
      "sm": Registered { "borderWidth": 32 },
    },
  },
  "borderBottom": Object {
    "color": Object {
      "base": Registered { "borderBottomColor": "#000" },
      "fg": Registered { "borderBottomColor": "#fff" },
      "trim": Registered { "borderBottomColor": "#333" },
    },
    "width": Object {
      "lg": Registered { "borderBottomWidth": 64 },
      "px": Registered { "borderBottomWidth": 0.5 },
      "sm": Registered { "borderBottomWidth": 32 },
    },
  },
  "borderLeft": Object {
    "color": Object {
      "base": Registered { "borderLeftColor": "#000" },
      "fg": Registered { "borderLeftColor": "#fff" },
      "trim": Registered { "borderLeftColor": "#333" },
    },
    "width": Object {
      "lg": Registered { "borderLeftWidth": 64 },
      "px": Registered { "borderLeftWidth": 0.5 },
      "sm": Registered { "borderLeftWidth": 32 },
    },
  },
  "borderRight": Object {
    "color": Object {
      "base": Registered { "borderRightColor": "#000" },
      "fg": Registered { "borderRightColor": "#fff" },
      "trim": Registered { "borderRightColor": "#333" },
    },
    "width": Object {
      "lg": Registered { "borderRightWidth": 64 },
      "px": Registered { "borderRightWidth": 0.5 },
      "sm": Registered { "borderRightWidth": 32 },
    },
  },
  "borderTop": Object {
    "color": Object {
      "base": Registered { "borderTopColor": "#000" },
      "fg": Registered { "borderTopColor": "#fff" },
      "trim": Registered { "borderTopColor": "#333" },
    },
    "width": Object {
      "lg": Registered { "borderTopWidth": 64 },
      "px": Registered { "borderTopWidth": 0.5 },
      "sm": Registered { "borderTopWidth": 32 },
    },
  },
  "colors": Object {
    "base": "#000",
    "fg": "#fff",
    "trim": "#333",
  },
  "flex": Object {
    "col": Registered { "flexDirection": "column" },
    "colR": Registered { "flexDirection": "column-reverse" },
    "one": Registered { "flex": 1 },
    "row": Registered { "flexDirection": "row" },
    "rowR": Registered { "flexDirection": "row-reverse" },
    "wrap": Registered { "flexWrap": "wrap" },
  },
  "flexGrow": Object {
    "one": Registered { "flexGrow": 1 },
    "zero": Registered { "flexGrow": 0 },
  },
  "font": Object {
    "bold": Registered { "fontWeight": "700" },
    "italic": Registered { "fontStyle": "italic" },
    "medium": Registered { "fontWeight": "500" },
    "semiBold": Registered { "fontWeight": "600" },
  },
  "h": Object {
    "full": Registered { "height": "100%" },
    "half": Registered { "height": "50%" },
    "lg": Registered { "height": 64 },
    "px": Registered { "height": 0.5 },
    "sm": Registered { "height": 32 },
  },
  "items": Object {
    "baseline": Registered { "alignItems": "baseline" },
    "center": Registered { "alignItems": "center" },
    "end": Registered { "alignItems": "flex-end" },
    "start": Registered { "alignItems": "flex-start" },
    "stretch": Registered { "alignItems": "stretch" },
  },
  "justify": Object {
    "around": Registered { "justifyContent": "space-around" },
    "between": Registered { "justifyContent": "space-between" },
    "center": Registered { "justifyContent": "center" },
    "end": Registered { "justifyContent": "flex-end" },
    "start": Registered { "justifyContent": "flex-start" },
  },
  "m": Object {
    "full": Registered { "margin": "100%" },
    "half": Registered { "margin": "50%" },
    "lg": Registered { "margin": 64 },
    "px": Registered { "margin": 0.5 },
    "sm": Registered { "margin": 32 },
  },
  "maxH": Object {
    "full": Registered { "maxHeight": "100%" },
    "half": Registered { "maxHeight": "50%" },
    "lg": Registered { "maxHeight": 64 },
    "px": Registered { "maxHeight": 0.5 },
    "sm": Registered { "maxHeight": 32 },
  },
  "maxW": Object {
    "full": Registered { "maxWidth": "100%" },
    "half": Registered { "maxWidth": "50%" },
    "lg": Registered { "maxWidth": 64 },
    "px": Registered { "maxWidth": 0.5 },
    "sm": Registered { "maxWidth": 32 },
  },
  "mb": Object {
    "full": Registered { "marginBottom": "100%" },
    "half": Registered { "marginBottom": "50%" },
    "lg": Registered { "marginBottom": 64 },
    "px": Registered { "marginBottom": 0.5 },
    "sm": Registered { "marginBottom": 32 },
  },
  "me": Object {
    "full": Registered { "marginEnd": "100%" },
    "half": Registered { "marginEnd": "50%" },
    "lg": Registered { "marginEnd": 64 },
    "px": Registered { "marginEnd": 0.5 },
    "sm": Registered { "marginEnd": 32 },
  },
  "minH": Object {
    "full": Registered { "minHeight": "100%" },
    "half": Registered { "minHeight": "50%" },
    "lg": Registered { "minHeight": 64 },
    "px": Registered { "minHeight": 0.5 },
    "sm": Registered { "minHeight": 32 },
  },
  "minW": Object {
    "full": Registered { "minWidth": "100%" },
    "half": Registered { "minWidth": "50%" },
    "lg": Registered { "minWidth": 64 },
    "px": Registered { "minWidth": 0.5 },
    "sm": Registered { "minWidth": 32 },
  },
  "mode": "dark",
  "ms": Object {
    "full": Registered { "marginStart": "100%" },
    "half": Registered { "marginStart": "50%" },
    "lg": Registered { "marginStart": 64 },
    "px": Registered { "marginStart": 0.5 },
    "sm": Registered { "marginStart": 32 },
  },
  "mt": Object {
    "full": Registered { "marginTop": "100%" },
    "half": Registered { "marginTop": "50%" },
    "lg": Registered { "marginTop": 64 },
    "px": Registered { "marginTop": 0.5 },
    "sm": Registered { "marginTop": 32 },
  },
  "mx": Object {
    "full": Registered { "marginHorizontal": "100%" },
    "half": Registered { "marginHorizontal": "50%" },
    "lg": Registered { "marginHorizontal": 64 },
    "px": Registered { "marginHorizontal": 0.5 },
    "sm": Registered { "marginHorizontal": 32 },
  },
  "my": Object {
    "full": Registered { "marginVertical": "100%" },
    "half": Registered { "marginVertical": "50%" },
    "lg": Registered { "marginVertical": 64 },
    "px": Registered { "marginVertical": 0.5 },
    "sm": Registered { "marginVertical": 32 },
  },
  "overflow": Object {
    "hidden": Registered { "overflow": "hidden" },
    "scroll": Registered { "overflow": "scroll" },
    "visible": Registered { "overflow": "visible" },
  },
  "p": Object {
    "full": Registered { "padding": "100%" },
    "half": Registered { "padding": "50%" },
    "lg": Registered { "padding": 64 },
    "px": Registered { "padding": 0.5 },
    "sm": Registered { "padding": 32 },
  },
  "pb": Object {
    "full": Registered { "paddingBottom": "100%" },
    "half": Registered { "paddingBottom": "50%" },
    "lg": Registered { "paddingBottom": 64 },
    "px": Registered { "paddingBottom": 0.5 },
    "sm": Registered { "paddingBottom": 32 },
  },
  "pe": Object {
    "full": Registered { "paddingEnd": "100%" },
    "half": Registered { "paddingEnd": "50%" },
    "lg": Registered { "paddingEnd": 64 },
    "px": Registered { "paddingEnd": 0.5 },
    "sm": Registered { "paddingEnd": 32 },
  },
  "ps": Object {
    "full": Registered { "paddingStart": "100%" },
    "half": Registered { "paddingStart": "50%" },
    "lg": Registered { "paddingStart": 64 },
    "px": Registered { "paddingStart": 0.5 },
    "sm": Registered { "paddingStart": 32 },
  },
  "pt": Object {
    "full": Registered { "paddingTop": "100%" },
    "half": Registered { "paddingTop": "50%" },
    "lg": Registered { "paddingTop": 64 },
    "px": Registered { "paddingTop": 0.5 },
    "sm": Registered { "paddingTop": 32 },
  },
  "px": Object {
    "full": Registered { "paddingHorizontal": "100%" },
    "half": Registered { "paddingHorizontal": "50%" },
    "lg": Registered { "paddingHorizontal": 64 },
    "px": Registered { "paddingHorizontal": 0.5 },
    "sm": Registered { "paddingHorizontal": 32 },
  },
  "py": Object {
    "full": Registered { "paddingVertical": "100%" },
    "half": Registered { "paddingVertical": "50%" },
    "lg": Registered { "paddingVertical": 64 },
    "px": Registered { "paddingVertical": 0.5 },
    "sm": Registered { "paddingVertical": 32 },
  },
  "relative": Registered { "position": "relative" },
  "rounded": Object {
    "lg": Registered { "borderRadius": 12 },
    "sm": Registered { "borderRadius": 4 },
  },
  "self": Object {
    "auto": Registered { "alignSelf": "auto" },
    "center": Registered { "alignSelf": "center" },
    "end": Registered { "alignSelf": "flex-end" },
    "start": Registered { "alignSelf": "flex-start" },
    "stretch": Registered { "alignSelf": "stretch" },
  },
  "sizeClass": "x",
  "text": Object {
    "body": Registered { "color": "#fff",
"fontSize": 32 },
    "capitalize": Registered { "textTransform": "capitalize" },
    "center": Registered { "textAlign": "center" },
    "color": Object {
      "base": Registered { "color": "#000" },
      "fg": Registered { "color": "#fff" },
      "trim": Registered { "color": "#333" },
    },
    "h1": Registered { "color": "#fff",
"fontSize": 64 },
    "justify": Registered { "textAlign": "justify" },
    "left": Registered { "textAlign": "left" },
    "lineThrough": Registered { "textDecorationLine": "line-through",
"textDecorationStyle": "solid" },
    "lowercase": Registered { "textTransform": "lowercase" },
    "noTextTransform": Registered { "textTransform": "none" },
    "noUnderline": Registered { "textDecorationLine": "none" },
    "right": Registered { "textAlign": "right" },
    "underline": Registered { "textDecorationLine": "underline",
"textDecorationStyle": "solid" },
    "uppercase": Registered { "textTransform": "uppercase" },
  },
  "w": Object {
    "full": Registered { "width": "100%" },
    "half": Registered { "width": "50%" },
    "lg": Registered { "width": 64 },
    "px": Registered { "width": 0.5 },
    "sm": Registered { "width": 32 },
  },
}
`;

exports[`usePrim styles light mode se sizeClass 1`] = `
Object {
  "absolute": Registered { "position": "absolute" },
  "bg": Object {
    "base": Registered { "backgroundColor": "#fff" },
    "fg": Registered { "backgroundColor": "#000" },
    "trim": Registered { "backgroundColor": "#ddd" },
  },
  "border": Object {
    "color": Object {
      "base": Registered { "borderColor": "#fff" },
      "fg": Registered { "borderColor": "#000" },
      "trim": Registered { "borderColor": "#ddd" },
    },
    "width": Object {
      "lg": Registered { "borderWidth": 44 },
      "px": Registered { "borderWidth": 0.5 },
      "sm": Registered { "borderWidth": 22 },
    },
  },
  "borderBottom": Object {
    "color": Object {
      "base": Registered { "borderBottomColor": "#fff" },
      "fg": Registered { "borderBottomColor": "#000" },
      "trim": Registered { "borderBottomColor": "#ddd" },
    },
    "width": Object {
      "lg": Registered { "borderBottomWidth": 44 },
      "px": Registered { "borderBottomWidth": 0.5 },
      "sm": Registered { "borderBottomWidth": 22 },
    },
  },
  "borderLeft": Object {
    "color": Object {
      "base": Registered { "borderLeftColor": "#fff" },
      "fg": Registered { "borderLeftColor": "#000" },
      "trim": Registered { "borderLeftColor": "#ddd" },
    },
    "width": Object {
      "lg": Registered { "borderLeftWidth": 44 },
      "px": Registered { "borderLeftWidth": 0.5 },
      "sm": Registered { "borderLeftWidth": 22 },
    },
  },
  "borderRight": Object {
    "color": Object {
      "base": Registered { "borderRightColor": "#fff" },
      "fg": Registered { "borderRightColor": "#000" },
      "trim": Registered { "borderRightColor": "#ddd" },
    },
    "width": Object {
      "lg": Registered { "borderRightWidth": 44 },
      "px": Registered { "borderRightWidth": 0.5 },
      "sm": Registered { "borderRightWidth": 22 },
    },
  },
  "borderTop": Object {
    "color": Object {
      "base": Registered { "borderTopColor": "#fff" },
      "fg": Registered { "borderTopColor": "#000" },
      "trim": Registered { "borderTopColor": "#ddd" },
    },
    "width": Object {
      "lg": Registered { "borderTopWidth": 44 },
      "px": Registered { "borderTopWidth": 0.5 },
      "sm": Registered { "borderTopWidth": 22 },
    },
  },
  "colors": Object {
    "base": "#fff",
    "fg": "#000",
    "trim": "#ddd",
  },
  "flex": Object {
    "col": Registered { "flexDirection": "column" },
    "colR": Registered { "flexDirection": "column-reverse" },
    "one": Registered { "flex": 1 },
    "row": Registered { "flexDirection": "row" },
    "rowR": Registered { "flexDirection": "row-reverse" },
    "wrap": Registered { "flexWrap": "wrap" },
  },
  "flexGrow": Object {
    "one": Registered { "flexGrow": 1 },
    "zero": Registered { "flexGrow": 0 },
  },
  "font": Object {
    "bold": Registered { "fontWeight": "700" },
    "italic": Registered { "fontStyle": "italic" },
    "medium": Registered { "fontWeight": "500" },
    "semiBold": Registered { "fontWeight": "600" },
  },
  "h": Object {
    "full": Registered { "height": "100%" },
    "half": Registered { "height": "50%" },
    "lg": Registered { "height": 44 },
    "px": Registered { "height": 0.5 },
    "sm": Registered { "height": 22 },
  },
  "items": Object {
    "baseline": Registered { "alignItems": "baseline" },
    "center": Registered { "alignItems": "center" },
    "end": Registered { "alignItems": "flex-end" },
    "start": Registered { "alignItems": "flex-start" },
    "stretch": Registered { "alignItems": "stretch" },
  },
  "justify": Object {
    "around": Registered { "justifyContent": "space-around" },
    "between": Registered { "justifyContent": "space-between" },
    "center": Registered { "justifyContent": "center" },
    "end": Registered { "justifyContent": "flex-end" },
    "start": Registered { "justifyContent": "flex-start" },
  },
  "m": Object {
    "full": Registered { "margin": "100%" },
    "half": Registered { "margin": "50%" },
    "lg": Registered { "margin": 44 },
    "px": Registered { "margin": 0.5 },
    "sm": Registered { "margin": 22 },
  },
  "maxH": Object {
    "full": Registered { "maxHeight": "100%" },
    "half": Registered { "maxHeight": "50%" },
    "lg": Registered { "maxHeight": 44 },
    "px": Registered { "maxHeight": 0.5 },
    "sm": Registered { "maxHeight": 22 },
  },
  "maxW": Object {
    "full": Registered { "maxWidth": "100%" },
    "half": Registered { "maxWidth": "50%" },
    "lg": Registered { "maxWidth": 44 },
    "px": Registered { "maxWidth": 0.5 },
    "sm": Registered { "maxWidth": 22 },
  },
  "mb": Object {
    "full": Registered { "marginBottom": "100%" },
    "half": Registered { "marginBottom": "50%" },
    "lg": Registered { "marginBottom": 44 },
    "px": Registered { "marginBottom": 0.5 },
    "sm": Registered { "marginBottom": 22 },
  },
  "me": Object {
    "full": Registered { "marginEnd": "100%" },
    "half": Registered { "marginEnd": "50%" },
    "lg": Registered { "marginEnd": 44 },
    "px": Registered { "marginEnd": 0.5 },
    "sm": Registered { "marginEnd": 22 },
  },
  "minH": Object {
    "full": Registered { "minHeight": "100%" },
    "half": Registered { "minHeight": "50%" },
    "lg": Registered { "minHeight": 44 },
    "px": Registered { "minHeight": 0.5 },
    "sm": Registered { "minHeight": 22 },
  },
  "minW": Object {
    "full": Registered { "minWidth": "100%" },
    "half": Registered { "minWidth": "50%" },
    "lg": Registered { "minWidth": 44 },
    "px": Registered { "minWidth": 0.5 },
    "sm": Registered { "minWidth": 22 },
  },
  "mode": "light",
  "ms": Object {
    "full": Registered { "marginStart": "100%" },
    "half": Registered { "marginStart": "50%" },
    "lg": Registered { "marginStart": 44 },
    "px": Registered { "marginStart": 0.5 },
    "sm": Registered { "marginStart": 22 },
  },
  "mt": Object {
    "full": Registered { "marginTop": "100%" },
    "half": Registered { "marginTop": "50%" },
    "lg": Registered { "marginTop": 44 },
    "px": Registered { "marginTop": 0.5 },
    "sm": Registered { "marginTop": 22 },
  },
  "mx": Object {
    "full": Registered { "marginHorizontal": "100%" },
    "half": Registered { "marginHorizontal": "50%" },
    "lg": Registered { "marginHorizontal": 44 },
    "px": Registered { "marginHorizontal": 0.5 },
    "sm": Registered { "marginHorizontal": 22 },
  },
  "my": Object {
    "full": Registered { "marginVertical": "100%" },
    "half": Registered { "marginVertical": "50%" },
    "lg": Registered { "marginVertical": 44 },
    "px": Registered { "marginVertical": 0.5 },
    "sm": Registered { "marginVertical": 22 },
  },
  "overflow": Object {
    "hidden": Registered { "overflow": "hidden" },
    "scroll": Registered { "overflow": "scroll" },
    "visible": Registered { "overflow": "visible" },
  },
  "p": Object {
    "full": Registered { "padding": "100%" },
    "half": Registered { "padding": "50%" },
    "lg": Registered { "padding": 44 },
    "px": Registered { "padding": 0.5 },
    "sm": Registered { "padding": 22 },
  },
  "pb": Object {
    "full": Registered { "paddingBottom": "100%" },
    "half": Registered { "paddingBottom": "50%" },
    "lg": Registered { "paddingBottom": 44 },
    "px": Registered { "paddingBottom": 0.5 },
    "sm": Registered { "paddingBottom": 22 },
  },
  "pe": Object {
    "full": Registered { "paddingEnd": "100%" },
    "half": Registered { "paddingEnd": "50%" },
    "lg": Registered { "paddingEnd": 44 },
    "px": Registered { "paddingEnd": 0.5 },
    "sm": Registered { "paddingEnd": 22 },
  },
  "ps": Object {
    "full": Registered { "paddingStart": "100%" },
    "half": Registered { "paddingStart": "50%" },
    "lg": Registered { "paddingStart": 44 },
    "px": Registered { "paddingStart": 0.5 },
    "sm": Registered { "paddingStart": 22 },
  },
  "pt": Object {
    "full": Registered { "paddingTop": "100%" },
    "half": Registered { "paddingTop": "50%" },
    "lg": Registered { "paddingTop": 44 },
    "px": Registered { "paddingTop": 0.5 },
    "sm": Registered { "paddingTop": 22 },
  },
  "px": Object {
    "full": Registered { "paddingHorizontal": "100%" },
    "half": Registered { "paddingHorizontal": "50%" },
    "lg": Registered { "paddingHorizontal": 44 },
    "px": Registered { "paddingHorizontal": 0.5 },
    "sm": Registered { "paddingHorizontal": 22 },
  },
  "py": Object {
    "full": Registered { "paddingVertical": "100%" },
    "half": Registered { "paddingVertical": "50%" },
    "lg": Registered { "paddingVertical": 44 },
    "px": Registered { "paddingVertical": 0.5 },
    "sm": Registered { "paddingVertical": 22 },
  },
  "relative": Registered { "position": "relative" },
  "rounded": Object {
    "lg": Registered { "borderRadius": 12 },
    "sm": Registered { "borderRadius": 4 },
  },
  "self": Object {
    "auto": Registered { "alignSelf": "auto" },
    "center": Registered { "alignSelf": "center" },
    "end": Registered { "alignSelf": "flex-end" },
    "start": Registered { "alignSelf": "flex-start" },
    "stretch": Registered { "alignSelf": "stretch" },
  },
  "sizeClass": "se",
  "text": Object {
    "body": Registered { "color": "#000",
"fontSize": 22 },
    "capitalize": Registered { "textTransform": "capitalize" },
    "center": Registered { "textAlign": "center" },
    "color": Object {
      "base": Registered { "color": "#fff" },
      "fg": Registered { "color": "#000" },
      "trim": Registered { "color": "#ddd" },
    },
    "h1": Registered { "color": "#000",
"fontSize": 44 },
    "justify": Registered { "textAlign": "justify" },
    "left": Registered { "textAlign": "left" },
    "lineThrough": Registered { "textDecorationLine": "line-through",
"textDecorationStyle": "solid" },
    "lowercase": Registered { "textTransform": "lowercase" },
    "noTextTransform": Registered { "textTransform": "none" },
    "noUnderline": Registered { "textDecorationLine": "none" },
    "right": Registered { "textAlign": "right" },
    "underline": Registered { "textDecorationLine": "underline",
"textDecorationStyle": "solid" },
    "uppercase": Registered { "textTransform": "uppercase" },
  },
  "w": Object {
    "full": Registered { "width": "100%" },
    "half": Registered { "width": "50%" },
    "lg": Registered { "width": 44 },
    "px": Registered { "width": 0.5 },
    "sm": Registered { "width": 22 },
  },
}
`;

exports[`usePrim styles light mode tablet sizeClass 1`] = `
Object {
  "absolute": Registered { "position": "absolute" },
  "bg": Object {
    "base": Registered { "backgroundColor": "#fff" },
    "fg": Registered { "backgroundColor": "#000" },
    "trim": Registered { "backgroundColor": "#ddd" },
  },
  "border": Object {
    "color": Object {
      "base": Registered { "borderColor": "#fff" },
      "fg": Registered { "borderColor": "#000" },
      "trim": Registered { "borderColor": "#ddd" },
    },
    "width": Object {
      "lg": Registered { "borderWidth": 72 },
      "px": Registered { "borderWidth": 0.5 },
      "sm": Registered { "borderWidth": 44 },
    },
  },
  "borderBottom": Object {
    "color": Object {
      "base": Registered { "borderBottomColor": "#fff" },
      "fg": Registered { "borderBottomColor": "#000" },
      "trim": Registered { "borderBottomColor": "#ddd" },
    },
    "width": Object {
      "lg": Registered { "borderBottomWidth": 72 },
      "px": Registered { "borderBottomWidth": 0.5 },
      "sm": Registered { "borderBottomWidth": 44 },
    },
  },
  "borderLeft": Object {
    "color": Object {
      "base": Registered { "borderLeftColor": "#fff" },
      "fg": Registered { "borderLeftColor": "#000" },
      "trim": Registered { "borderLeftColor": "#ddd" },
    },
    "width": Object {
      "lg": Registered { "borderLeftWidth": 72 },
      "px": Registered { "borderLeftWidth": 0.5 },
      "sm": Registered { "borderLeftWidth": 44 },
    },
  },
  "borderRight": Object {
    "color": Object {
      "base": Registered { "borderRightColor": "#fff" },
      "fg": Registered { "borderRightColor": "#000" },
      "trim": Registered { "borderRightColor": "#ddd" },
    },
    "width": Object {
      "lg": Registered { "borderRightWidth": 72 },
      "px": Registered { "borderRightWidth": 0.5 },
      "sm": Registered { "borderRightWidth": 44 },
    },
  },
  "borderTop": Object {
    "color": Object {
      "base": Registered { "borderTopColor": "#fff" },
      "fg": Registered { "borderTopColor": "#000" },
      "trim": Registered { "borderTopColor": "#ddd" },
    },
    "width": Object {
      "lg": Registered { "borderTopWidth": 72 },
      "px": Registered { "borderTopWidth": 0.5 },
      "sm": Registered { "borderTopWidth": 44 },
    },
  },
  "colors": Object {
    "base": "#fff",
    "fg": "#000",
    "trim": "#ddd",
  },
  "flex": Object {
    "col": Registered { "flexDirection": "column" },
    "colR": Registered { "flexDirection": "column-reverse" },
    "one": Registered { "flex": 1 },
    "row": Registered { "flexDirection": "row" },
    "rowR": Registered { "flexDirection": "row-reverse" },
    "wrap": Registered { "flexWrap": "wrap" },
  },
  "flexGrow": Object {
    "one": Registered { "flexGrow": 1 },
    "zero": Registered { "flexGrow": 0 },
  },
  "font": Object {
    "bold": Registered { "fontWeight": "700" },
    "italic": Registered { "fontStyle": "italic" },
    "medium": Registered { "fontWeight": "500" },
    "semiBold": Registered { "fontWeight": "600" },
  },
  "h": Object {
    "full": Registered { "height": "100%" },
    "half": Registered { "height": "50%" },
    "lg": Registered { "height": 72 },
    "px": Registered { "height": 0.5 },
    "sm": Registered { "height": 44 },
  },
  "items": Object {
    "baseline": Registered { "alignItems": "baseline" },
    "center": Registered { "alignItems": "center" },
    "end": Registered { "alignItems": "flex-end" },
    "start": Registered { "alignItems": "flex-start" },
    "stretch": Registered { "alignItems": "stretch" },
  },
  "justify": Object {
    "around": Registered { "justifyContent": "space-around" },
    "between": Registered { "justifyContent": "space-between" },
    "center": Registered { "justifyContent": "center" },
    "end": Registered { "justifyContent": "flex-end" },
    "start": Registered { "justifyContent": "flex-start" },
  },
  "m": Object {
    "full": Registered { "margin": "100%" },
    "half": Registered { "margin": "50%" },
    "lg": Registered { "margin": 72 },
    "px": Registered { "margin": 0.5 },
    "sm": Registered { "margin": 44 },
  },
  "maxH": Object {
    "full": Registered { "maxHeight": "100%" },
    "half": Registered { "maxHeight": "50%" },
    "lg": Registered { "maxHeight": 72 },
    "px": Registered { "maxHeight": 0.5 },
    "sm": Registered { "maxHeight": 44 },
  },
  "maxW": Object {
    "full": Registered { "maxWidth": "100%" },
    "half": Registered { "maxWidth": "50%" },
    "lg": Registered { "maxWidth": 72 },
    "px": Registered { "maxWidth": 0.5 },
    "sm": Registered { "maxWidth": 44 },
  },
  "mb": Object {
    "full": Registered { "marginBottom": "100%" },
    "half": Registered { "marginBottom": "50%" },
    "lg": Registered { "marginBottom": 72 },
    "px": Registered { "marginBottom": 0.5 },
    "sm": Registered { "marginBottom": 44 },
  },
  "me": Object {
    "full": Registered { "marginEnd": "100%" },
    "half": Registered { "marginEnd": "50%" },
    "lg": Registered { "marginEnd": 72 },
    "px": Registered { "marginEnd": 0.5 },
    "sm": Registered { "marginEnd": 44 },
  },
  "minH": Object {
    "full": Registered { "minHeight": "100%" },
    "half": Registered { "minHeight": "50%" },
    "lg": Registered { "minHeight": 72 },
    "px": Registered { "minHeight": 0.5 },
    "sm": Registered { "minHeight": 44 },
  },
  "minW": Object {
    "full": Registered { "minWidth": "100%" },
    "half": Registered { "minWidth": "50%" },
    "lg": Registered { "minWidth": 72 },
    "px": Registered { "minWidth": 0.5 },
    "sm": Registered { "minWidth": 44 },
  },
  "mode": "light",
  "ms": Object {
    "full": Registered { "marginStart": "100%" },
    "half": Registered { "marginStart": "50%" },
    "lg": Registered { "marginStart": 72 },
    "px": Registered { "marginStart": 0.5 },
    "sm": Registered { "marginStart": 44 },
  },
  "mt": Object {
    "full": Registered { "marginTop": "100%" },
    "half": Registered { "marginTop": "50%" },
    "lg": Registered { "marginTop": 72 },
    "px": Registered { "marginTop": 0.5 },
    "sm": Registered { "marginTop": 44 },
  },
  "mx": Object {
    "full": Registered { "marginHorizontal": "100%" },
    "half": Registered { "marginHorizontal": "50%" },
    "lg": Registered { "marginHorizontal": 72 },
    "px": Registered { "marginHorizontal": 0.5 },
    "sm": Registered { "marginHorizontal": 44 },
  },
  "my": Object {
    "full": Registered { "marginVertical": "100%" },
    "half": Registered { "marginVertical": "50%" },
    "lg": Registered { "marginVertical": 72 },
    "px": Registered { "marginVertical": 0.5 },
    "sm": Registered { "marginVertical": 44 },
  },
  "overflow": Object {
    "hidden": Registered { "overflow": "hidden" },
    "scroll": Registered { "overflow": "scroll" },
    "visible": Registered { "overflow": "visible" },
  },
  "p": Object {
    "full": Registered { "padding": "100%" },
    "half": Registered { "padding": "50%" },
    "lg": Registered { "padding": 72 },
    "px": Registered { "padding": 0.5 },
    "sm": Registered { "padding": 44 },
  },
  "pb": Object {
    "full": Registered { "paddingBottom": "100%" },
    "half": Registered { "paddingBottom": "50%" },
    "lg": Registered { "paddingBottom": 72 },
    "px": Registered { "paddingBottom": 0.5 },
    "sm": Registered { "paddingBottom": 44 },
  },
  "pe": Object {
    "full": Registered { "paddingEnd": "100%" },
    "half": Registered { "paddingEnd": "50%" },
    "lg": Registered { "paddingEnd": 72 },
    "px": Registered { "paddingEnd": 0.5 },
    "sm": Registered { "paddingEnd": 44 },
  },
  "ps": Object {
    "full": Registered { "paddingStart": "100%" },
    "half": Registered { "paddingStart": "50%" },
    "lg": Registered { "paddingStart": 72 },
    "px": Registered { "paddingStart": 0.5 },
    "sm": Registered { "paddingStart": 44 },
  },
  "pt": Object {
    "full": Registered { "paddingTop": "100%" },
    "half": Registered { "paddingTop": "50%" },
    "lg": Registered { "paddingTop": 72 },
    "px": Registered { "paddingTop": 0.5 },
    "sm": Registered { "paddingTop": 44 },
  },
  "px": Object {
    "full": Registered { "paddingHorizontal": "100%" },
    "half": Registered { "paddingHorizontal": "50%" },
    "lg": Registered { "paddingHorizontal": 72 },
    "px": Registered { "paddingHorizontal": 0.5 },
    "sm": Registered { "paddingHorizontal": 44 },
  },
  "py": Object {
    "full": Registered { "paddingVertical": "100%" },
    "half": Registered { "paddingVertical": "50%" },
    "lg": Registered { "paddingVertical": 72 },
    "px": Registered { "paddingVertical": 0.5 },
    "sm": Registered { "paddingVertical": 44 },
  },
  "relative": Registered { "position": "relative" },
  "rounded": Object {
    "lg": Registered { "borderRadius": 12 },
    "sm": Registered { "borderRadius": 4 },
  },
  "self": Object {
    "auto": Registered { "alignSelf": "auto" },
    "center": Registered { "alignSelf": "center" },
    "end": Registered { "alignSelf": "flex-end" },
    "start": Registered { "alignSelf": "flex-start" },
    "stretch": Registered { "alignSelf": "stretch" },
  },
  "sizeClass": "tablet",
  "text": Object {
    "body": Registered { "color": "#000",
"fontSize": 44 },
    "capitalize": Registered { "textTransform": "capitalize" },
    "center": Registered { "textAlign": "center" },
    "color": Object {
      "base": Registered { "color": "#fff" },
      "fg": Registered { "color": "#000" },
      "trim": Registered { "color": "#ddd" },
    },
    "h1": Registered { "color": "#000",
"fontSize": 72 },
    "justify": Registered { "textAlign": "justify" },
    "left": Registered { "textAlign": "left" },
    "lineThrough": Registered { "textDecorationLine": "line-through",
"textDecorationStyle": "solid" },
    "lowercase": Registered { "textTransform": "lowercase" },
    "noTextTransform": Registered { "textTransform": "none" },
    "noUnderline": Registered { "textDecorationLine": "none" },
    "right": Registered { "textAlign": "right" },
    "underline": Registered { "textDecorationLine": "underline",
"textDecorationStyle": "solid" },
    "uppercase": Registered { "textTransform": "uppercase" },
  },
  "w": Object {
    "full": Registered { "width": "100%" },
    "half": Registered { "width": "50%" },
    "lg": Registered { "width": 72 },
    "px": Registered { "width": 0.5 },
    "sm": Registered { "width": 44 },
  },
}
`;
